/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GenAI Service API
 * OpenAPI spec version: 1.0.0
 */
import type { ChatMessageRole } from './chatMessageRole.ts';

export interface ChatMessage {
  /**
     * @minimum -9223372036854776000
     * @maximum 9223372036854776000
     */
  id?: number;
  role?: ChatMessageRole;
  content?: string;
  /**
     * @minimum -9223372036854776000
     * @maximum 9223372036854776000
     */
  timestamp?: number;
}
